move inline CSS to external .css file

--- a/bertytech/layouts/_default/id.html
+++ b/bertytech/layouts/_default/id.html
@@ -1,22 +1,15 @@
-{{.Scratch.Set "body-class" "page-single wh"}}
+{{.Scratch.Set "body-class" "page-single wh bg-blue id-page"}}
 {{ partial "head" . }}
 {{ $ctx := . }}
 
-<header class="header-rounded large {{ if .Params.Hclass }}{{.Params.Hclass}}{{ else }}bg-blue gradient{{ end }}" {{ with .Params.image_bg }}style="background-image:url('{{ ($.Page.Resources.GetMatch .).RelPermalink }}')"{{end}}>
+<header class="header-rounded large">
   <div class="container text-center">
     <h1 class="text-shadow">{{.Title}}</h1>
     {{ if .Params.Subtitle }}
-    <h3 class="text-shadow subtitle d-flex justify-content-center"><div><strong>{{.Params.Subtitle }}</strong></div> <div class="counter-badge" style="    width: 30px;
-      height: 30px;
-      background: red;
-      border-radius: 100%;
-      font-size: 19px;
-      font-weight: 900;
-      color: #fff;
-      padding-top: 3px;
-      position: relative;
-      left: 7px;
-      top: -15px;">1</div></h3>
+    <h3 class="text-shadow subtitle d-flex justify-content-center">
+      <div><strong>{{.Params.Subtitle }}</strong></div> 
+      <div class="counter-badge">1</div>
+    </h3>
     {{ end }}
   </div>
 </header>
@@ -36,20 +29,22 @@
           <!-- Download Berty -->
           <div class="col-lg-4 text-center order-2 order-lg-1 mb-5">
             {{ with .Page.Params.download_berty }}
-            <div class="block bg-white h-100 d-flex flex-column" style="display: flex!important;">
-              <h3 class="c-blue mb-4">
-                <strong>{{.title}}</strong>
-              </h3>
-              <div class="flex-grow-1 d-flex align-items-center justify-content-center">
-                <div class="w-100" style="max-width: 200px;">
-                  {{ partial "img" (dict "ctx" $ctx "src" $.Site.Params.logoSVG "width" "300" "height" "150") }}
+            <div class="block download-berty-block bg-white h-100">
+              <div class="h-100 d-flex flex-column">
+                <h3 class="c-blue mb-4">
+                  <strong>{{.title}}</strong>
+                </h3>
+                <div class="flex-grow-1 d-flex align-items-center justify-content-center">
+                  <div class="berty-logo w-100">
+                    {{ partial "img" (dict "ctx" $ctx "src" $.Site.Params.logoSVG "width" "300" "height" "150") }}
+                  </div>
                 </div>
-              </div>
-              <div>
-                <p class="c-grey">{{.body}}</p>
-                <a class="btn btn-bty btn-blue icon-right" href="{{ `/download` | relLangURL }}" role="button">
-                  <strong>{{ .button_text | upper }}</strong>
-                </a>
+                <div>
+                  <p class="c-grey">{{.body}}</p>
+                  <a class="btn btn-bty btn-blue icon-right" href="{{ `/download` | relLangURL }}" role="button">
+                    <strong>{{ .button_text | upper }}</strong>
+                  </a>
+                </div>
               </div>
             </div>
             {{ end }}
@@ -79,7 +74,7 @@
           <!-- What is Berty -->
           <div class="col-lg-4 order-3 mb-5">
             {{ with .Page.Params.what_is_berty }}
-            <div class="block bg-white text-center h-100">
+            <div class="block what-is-berty-block bg-white text-center h-100">
               <h3 class="c-blue mb-4">
                 <strong>{{.title}}</strong>
               </h3>
@@ -89,7 +84,7 @@
                 {{ $color_class := index $color_classes $index }}
                 {{ $is_image := hasPrefix .icon "/" }}
                 <div class="col-6 px-1">
-                  <div class="{{ $color_class }}" style="height: 60px; width: 80px; margin: auto; font-size: 35px; margin-bottom: 15px;">
+                  <div class="{{ $color_class }} icon">
                   {{ if $is_image }}
                     {{ partial "img" (dict "ctx" $ctx "src" .icon "width" "80" "height" "60") }}
                   {{ else }}
