--- a/bertytech/assets/css/style.scss
+++ b/bertytech/assets/css/style.scss
@@ -3822,3 +3822,37 @@ $table-first-column-width-mobile: 115px;
     }
   }
 }
+
+/* ID page */
+.id-page {
+  .counter-badge {
+    width: 30px;
+    height: 30px;
+    background: red;
+    border-radius: 100%;
+    font-size: 19px;
+    font-weight: 900;
+    color: #fff;
+    padding-top: 3px;
+    position: relative;
+    left: 7px;
+    top: -15px;
+  }
+  
+  .download-berty-block .berty-logo {
+    max-width: 200px;
+  }
+  
+  .what-is-berty-block .icon {
+    height: 60px; 
+    width: 80px; 
+    margin: auto; 
+    font-size: 35px; 
+    margin-bottom: 15px;
+  }
+
+  .block-id-qrcode canvas {
+    max-width: 100%;
+  }
+}
+
