make error block full height

--- a/bertytech/layouts/_default/id.html
+++ b/bertytech/layouts/_default/id.html
@@ -59,14 +59,16 @@
               <div class="block-id-qrcode" id="id-qrcode"></div>
             </div>
             <div
-              class="block block-id bg-white block-error display-none"
+              class="block block-id bg-white block-error display-none h-100"
               id="id-block-error"
             >
-              <div class="block-id-avatar">
-                <i class="far fa-exclamation-triangle"></i>
-              </div>
-              <div class="block-id-name">
-                <h4>This is not a valid Berty Key</h4>
+              <div class="d-flex flex-column h-100">
+                <div class="block-id-avatar">
+                  <i class="far fa-exclamation-triangle"></i>
+                </div>
+                <div class="block-id-name flex-grow-1 d-flex align-items-center justify-content-center">
+                  <h4>This is not a valid Berty Key</h4>
+                </div>
               </div>
             </div>
           </div>
