--- a/bertytech/layouts/_default/id.html
+++ b/bertytech/layouts/_default/id.html
@@ -41,7 +41,7 @@
                 </div>
                 <div>
                   <p class="c-grey">{{.body}}</p>
-                  <a class="btn btn-bty btn-blue icon-right" href="{{ `/download` | relLangURL }}" role="button">
+                  <a class="btn btn-bty btn-blue btn-disabled" href="#" role="button">
                     <strong>{{ .button_text | upper }}</strong>
                   </a>
                 </div>
