Add "Feature Requests" to support page

--- a/bertytech/assets/css/style.scss
+++ b/bertytech/assets/css/style.scss
@@ -3822,3 +3822,10 @@ $table-first-column-width-mobile: 115px;
     }
   }
 }
+
+/* SUPPORT PAGE */
+.support-page {
+  .block {
+    padding: 20px;
+  }
+}
