--- a/bertytech/layouts/partials/compare-messenger-apps.html
+++ b/bertytech/layouts/partials/compare-messenger-apps.html
@@ -1,5 +1,17 @@
 {{ $table := .Site.GetPage "/compare-table-apps" }}
-{{ $apps := sort ($table.Resources.Match "*") ".Params.weight" }}
+{{ $_apps := sort ($table.Resources.Match "*") ".Params.weight" }}
+
+<!-- 
+  Make sure to ignore include the app translation files,
+  by checking if there is more than 1 dot in the filename.
+-->
+{{ $apps := slice }}
+{{ range $_apps }}
+  {{ $app := replace .File.Path "." "___" }}
+  {{ if lt (len (findRE "___" $app)) 2 }}
+    {{ $apps = $apps | append . }}
+  {{ end }}
+{{ end }}
 
 <div class="row">
   <div class="col-md-12">
