--- a/bertytech/layouts/partials/compare-messenger-apps.html
+++ b/bertytech/layouts/partials/compare-messenger-apps.html
@@ -2,14 +2,19 @@
 {{ $_apps := sort ($table.Resources.Match "*") ".Params.weight" }}
 
 <!-- 
-  Make sure to ignore include the app translation files,
+  Make sure to ignore the translation files,
   by checking if there is more than 1 dot in the filename.
+  Because on the English page "$_apps" also contains files from other languages.
 -->
 {{ $apps := slice }}
-{{ range $_apps }}
-  {{ $app := replace .File.Path "." "___" }}
-  {{ if lt (len (findRE "___" $app)) 2 }}
-    {{ $apps = $apps | append . }}
+{{ if ne .Site.Language "en" }}
+  {{$apps = $_apps}}
+{{ else }}
+  {{ range $_apps }}
+    {{ $app := replace .File.Path "." "___" }}
+    {{ if lt (len (findRE "___" $app)) 2 }}
+      {{ $apps = $apps | append . }}
+    {{ end }}
   {{ end }}
 {{ end }}
 
