ignore "aliases" when comparing translation files

--- a/bertytech/layouts/partials/is_translated_page.html
+++ b/bertytech/layouts/partials/is_translated_page.html
@@ -5,7 +5,7 @@
 {{ $s.Set "currentPage" . }}
 {{ $s.Set "isEnglishCopy" false }}
 {{ $englishSite := .Sites.First }}
-{{ $ignoreCompareKeys := slice "date" "lastmod" "url" }}
+{{ $ignoreCompareKeys := slice "date" "lastmod" "url" "aliases" }}
 
 {{ if ne .Lang "en" }}
   <!-- Get English page -->
