Add hreflang alternate tag for current page

--- a/bertytech/layouts/partials/head.html
+++ b/bertytech/layouts/partials/head.html
@@ -281,6 +281,7 @@
       <link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}">
       {{ end }}
     {{ end }}
+    <link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}">
 
     <meta name="description" content="{{ $.Scratch.Get `metaDescription` }}">
 
