--- a/bertytech/layouts/partials/block_early_look.html
+++ b/bertytech/layouts/partials/block_early_look.html
@@ -1,6 +1,6 @@
       <div class="block block-wi text-center bg-white">
 		<div class="block-wi-img s">
-			{{ partial "img" (dict "ctx" . "src" "/img/icon_early_look.svg" "width" "120" "height" "120") }}
+			{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/icon_early_look.svg") "width" "120" "height" "120") }}
 		</div><!-- /.block-wi-img -->
 		<h2>Early look</h2>
 		<p>Access to github repositories, download a preview version of the app...</p>
