--- a/bertytech/layouts/partials/block_press.html
+++ b/bertytech/layouts/partials/block_press.html
@@ -1,6 +1,6 @@
 <div class="block block-wi text-center bg-white">
 	<div class="block-wi-img s">
-		{{ partial "img" (dict "ctx" . "src" "/img/icon_press.svg" "width" "120" "height" "120") }}
+		{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/icon_press.svg") "width" "120" "height" "120") }}
 	</div><!-- /.block-f-img -->
 	<h2>Press & Media</h2>
 	<p>Get press contact, consult press releases, download assets...</p>
