--- a/bertytech/layouts/partials/navbar_old.html
+++ b/bertytech/layouts/partials/navbar_old.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light{{with .Scratch.Get "navbar-class"}} {{.}}{{end}}">
     <div class="container">
         <a class="navbar-brand" href="/">
-            {{ partial "img" (dict "ctx" . "class" "img-berty" "width" "150" "height" "45" "alt" "Berty Technologies" "src" .Site.Params.navbarLogo)}}
+            {{ partial "img" (dict "ctx" . "class" "img-berty" "width" "150" "height" "45" "alt" "Berty Technologies" "src" (resources.Get .Site.Params.navbarLogo))}}
         </a>
         <button on="tap:sidebar.open" class="navbar-toggler" type="button" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="Toggle navigation">
             <i class="far fa-bars"></i>
