--- a/bertytech/layouts/partials/section_whitepaper.html
+++ b/bertytech/layouts/partials/section_whitepaper.html
@@ -44,7 +44,7 @@
         <div class="col-lg-4 col-md-12">
           <div class="block block-wp block-wp-center text-center">
             <br />
-            {{ partial "img" (dict "ctx" . "class" "img-bty" "alt" "Berty Technologies" "src" "/img/berty_logo_square.svg" "width" "200" "height" "216") }}
+            {{ partial "img" (dict "ctx" . "class" "img-bty" "alt" "Berty Technologies" "src" (resources.Get "/img/berty_logo_square.svg") "width" "200" "height" "216") }}
             <br />
             <br />
             <br />
