--- a/bertytech/layouts/shortcodes/display_section_download.html
+++ b/bertytech/layouts/shortcodes/display_section_download.html
@@ -25,7 +25,7 @@
 						</div><!-- /.block-dl-btn -->
 					</div><!-- /.block-dl-text /.col -->
 					<div class="col-5 block-dl-img">
-						{{ partial "img" (dict "ctx" . "src" "/img/screen_ios.svg" "layout" "fill") }}
+						{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/screen_ios.svg") "layout" "fill") }}
 					</div><!-- /.block-dl-img /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.block-dl -->
@@ -52,7 +52,7 @@
 						</div><!-- /.block-dl-btn -->
 					</div><!-- /.block-dl-text /.col -->
 					<div class="col-5 block-dl-img">
-						{{ partial "img" (dict "ctx" . "src" "/img/screen_android.svg"  "layout" "fill") }}
+						{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/screen_android.svg")  "layout" "fill") }}
 					</div><!-- /.block-dl-img /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.block-dl -->
@@ -79,7 +79,7 @@
 						</div><!-- /.block-dl-btn -->
 					</div><!-- /.block-dl-text /.col -->
 					<div class="col-5 block-dl-img">
-						{{ partial "img" (dict "ctx" . "src" "/img/web.png" "layout" "fill") }}
+						{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/web.png") "layout" "fill") }}
 					</div><!-- /.block-dl-img /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.block-dl -->
@@ -105,7 +105,7 @@
 						</div><!-- /.block-dl-btn -->
 					</div><!-- /.block-dl-text /.col -->
 					<div class="col-5 block-dl-img">
-						{{ partial "img" (dict "ctx" . "src" "/img/web.png" "layout" "fill") }}
+						{{ partial "img" (dict "ctx" . "src" (resources.Get "/img/web.png") "layout" "fill") }}
 					</div><!-- /.block-dl-img /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.block-dl -->
