--- a/bertytech/layouts/partials/post_footer.html
+++ b/bertytech/layouts/partials/post_footer.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="post-avatar">
-        {{ partial "img" (dict "ctx" . "class" "avatar" "src" $authorImg.RelPermalink "width" "60" "height" "60") }}
+        {{ partial "img" (dict "ctx" . "class" "avatar" "src" $authorImg "width" "60" "height" "60") }}
       </div><!-- /.blockpost-avatar -->
       <div class="post-author">
 	<span class="author-name">{{ $authorName }}</span>
